--- a/ReforgedEdenMKII/ReforgedEdenMKII.csproj
+++ b/ReforgedEdenMKII/ReforgedEdenMKII.csproj
@@ -53,15 +53,14 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>..\..\..\..\..\Documents\EmpyrionScripting.Examples\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ReforgedEdenMKII.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
-    <Compile Include="WarpGate.cs" />
-    <Compile Include="WarpGateManager.cs" />
-    <Compile Include="WarpGateState.cs" />
-    <Compile Include="WarpManager.cs" />
     <Compile Include="WarpTask.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,4 +70,7 @@
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>pwsh  -file "C:\Users\me777\Documents\test empy server.ps1" $(TargetPath)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
