--- a/ReforgedEdenMKII/ReforgedEdenMKII.csproj
+++ b/ReforgedEdenMKII/ReforgedEdenMKII.csproj
@@ -35,11 +35,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mif">
-      <HintPath>..\..\..\..\..\Documents\Visual Studio 2022\ReforgedEdenMKI-main\ReforgedEdenMKI\Mif.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>.\Mif.dll</HintPath>
     </Reference>
-    <Reference Include="ModApi">
-      <HintPath>..\..\..\..\..\Documents\Visual Studio 2022\ReforgedEdenMKI-main\ReforgedEdenMKI\ModApi.dll</HintPath>
+    <Reference Include="ModApi, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\ModApi.dll</HintPath>
     </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\..\..\..\..\Documents\Visual Studio 2022\ReforgedEdenMKI-main\ReforgedEdenMKI\protobuf-net.dll</HintPath>
@@ -53,8 +53,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\..\..\Documents\EmpyrionScripting.Examples\UnityEngine.CoreModule.dll</HintPath>
+    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
